[package]
name = "general_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.5"
reqwest = { version = "0.11.18", features = ["stream"] }
error-chain = "0.12.4"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
bytes = "1.4.0"
tar = "0.4.39"
bzip2 = "0.4.4"
url = "2.4.0"
tempfile = "3.7.0"
